2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-02-05  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2024.1 and copyright 2024.

2023-08-26  Karl Berry  <karl@freefriends.org>

	* writet1.c (t1_builtin_enc): sync change from pdftexdir/writet1.c
	(r68069).

2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* beginfontk1.test, eepic-nan.test, pfbincl.test, same-name.test,
	test-{afm2tfm,dvips,missing-image,overflow-buffers}.test,
	uptex-vf.test: Make easier to test on Windows.

2023-04-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {virtualfont,pprescan,scanpage,dopage,tfmload}.c, dvips.h:
	Fallback multibyte characters in virtual fonts to
	OFM fonts for (u)pTeX.
	https://github.com/texjporg/tex-jp-build/issues/99
	* tfmload.c: Accept maximum EC 0x10FFFF for OFM level 1.
	* uptex-vf.test, Makefile_upjf, testdata/upjf-r00.{ofm,opl},
	testdata/upjv-r00.{ofm,opl}, testdata/upjf1-r.{tfm,pl},
	testdata/upjf1_{full,omit}.{vf,zvp0}, Makefile.am:
	Add new tests for fallback virtual font to OFM.

	The rule for virtual fonts (VF) fallback is extended:
	If a VF has no entry of a codepoint and the first
	MAPFONT designates an OFM for (u)pTeX, then we designate the
	glyph (usually with a fullwidth metric) of the same codepoint
	with the same metrics of the codepoint in the OFM.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2022-01-18  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* afm2tfm.c,
	* dvips.c,
	* dvips.h,
	* dvips.texi,
	* configure.ac: version 2023.1 and copyright 2023.

2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvips.c:
	Check options --help and --version before getdefaults(CONFIGFILE).
	This change prevents unwanted looking for texmf.cnf.

2022-04-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfmload.c:
	Warn if interpreting OFM FONTDIR as pTeX vertical writing
	with option -d 4.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.
